nodeport-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: factorial-nodeport
  namespace: factorial-service
spec:
  selector:
    app: factorial-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30080
  type: NodePort
  sessionAffinity: None
